syntax="proto3";

package filebank;

option go_package = "./proto";

/**
 * Messages for formatting and serialization
 * of client and server storage
*/

message ServerBankDescriptor {
  bytes pub_key = 1;
  int32 nbfiles = 2;
  repeated bytes merkle_hashes = 3;
}

message ClientBankDescriptor {
  bytes priv_key = 4;
  int32 nbfiles = 5;
  bytes merkle_root = 6;
  repeated FileDescriptor file_descriptors = 7;
}

message FileDescriptor {
  int32 seq = 1;
  bytes salt = 2;
  bytes iv = 3;
}

message ServerDescriptor {
  bytes pub_key = 1;
  string host = 2;
}
